//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  phone String [unique, not null]
  email String [unique]
  password String [not null]
  name String [not null]
  address String
  avatarPublicId String [unique]
  avatar String [not null]
  accessToken String
  refreshToken String
  bio String
  role Role [not null, default: 'PATIENT']
  patient Patient
  doctor Doctor
  manager Manager
  healthRecordConditions HealthRecordCondition [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Patient {
  user User [not null]
  id String [pk]
  healthRecord HealthRecord
  appointments Appointment [not null]

  indexes {
    (id) [pk]
  }
}

Table Manager {
  user User [not null]
  id String [pk]

  indexes {
    (id) [pk]
  }
}

Table HealthRecord {
  gender Gender
  bloodType String
  height Float
  weight Float
  birthDate DateTime
  bmi Float
  patient Patient [not null]
  patientId String [pk]
  healthRecordConditions HealthRecordCondition [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (patientId) [pk]
  }
}

Table Condition {
  id String [pk]
  name String [not null]
  description String [not null]
  healthRecordConditions HealthRecordCondition [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table HealthRecordCondition {
  severity Severity [not null, default: 'LOW']
  note String [default: '']
  type ConditionType [not null]
  from DateTime
  to DateTime
  healthRecord HealthRecord [not null]
  healthRecordId String [not null]
  condition Condition [not null]
  conditionId String [not null]
  lastUpdatedBy User [not null]
  lastUpdatedById String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (healthRecordId, conditionId) [pk]
  }
}

Table Specialty {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  doctorSpecialties DoctorSpecialty [not null]
  DoctorEducation DoctorEducation [not null]
}

Table MedicalSchool {
  id String [pk]
  name String [not null]
  abbr String [not null]
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  DoctorEducation DoctorEducation [not null]

  indexes {
    (name, abbr) [unique]
  }
}

Table DoctorEducation {
  doctorId String [not null]
  medicalSchoolId String [not null]
  specialtyId String [not null]
  degree Degree [not null]
  medicalSchool MedicalSchool [not null]
  doctor Doctor [not null]
  year String [not null]
  major Specialty [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (doctorId, medicalSchoolId, degree, year, specialtyId) [pk]
  }
}

Table DoctorSpecialty {
  doctorId String [not null]
  specialtyId String [not null]
  experience Int [not null]
  doctor Doctor [not null]
  specialty Specialty [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (doctorId, specialtyId) [pk]
  }
}

Table Doctor {
  user User [not null]
  id String [unique, not null]
  appointments Appointment [not null]
  doctorEducations DoctorEducation [not null]
  doctorSpecialties DoctorSpecialty [not null]
}

Table Appointment {
  id String [pk]
  date DateTime [not null]
  notes String
  status Status [not null]
  patient Patient [not null]
  patientId String [not null]
  doctor Doctor [not null]
  doctorId String [not null]
  prescription Prescription
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Prescription {
  conclusion String [not null]
  note String [not null, default: '']
  medicinePrescriptions MedicinePrescription [not null]
  appointment Appointment [not null]
  appointmentId String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (appointmentId) [pk]
  }
}

Table Medicine {
  id String [pk]
  name String [not null]
  image String [not null]
  composition String [not null]
  uses String [not null]
  sideEffects String [not null]
  manufacturer String [not null]
  capacity String
  medicinePrescriptions MedicinePrescription [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table MedicinePrescription {
  medicineId String [not null]
  prescriptionId String [not null]
  quantity Int [not null]
  dosage String
  medicine Medicine [not null]
  prescription Prescription [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (medicineId, prescriptionId) [pk]
  }
}

Enum Role {
  PATIENT
  DOCTOR
  MANAGER
}

Enum Status {
  PENDING
  ACCEPTED
  REJECTED
  CANCELED
  FINISHED
}

Enum Severity {
  LOW
  MEDIUM
  HIGH
}

Enum Gender {
  MALE
  FEMALE
  OTHER
}

Enum Degree {
  DOCTOR_OF_MEDICINE
  RESIDENT_DOCTOR
  FIRST_DEGREE_SPECIALIST
  SECOND_DEGREE_SPECIALIST
  MASTER
  PHD
  ASSOCIATE_PROFESSOR
  PROFESSOR
}

Enum ConditionType {
  DISEASE
  ALLERGY
  SYMPTOM
  PAST_SURGERY
  FAMILY_HISTORY
  OTHER
}

Ref: Patient.id - User.id [delete: Cascade]

Ref: Manager.id - User.id [delete: Cascade]

Ref: HealthRecord.patientId - Patient.id [delete: Cascade]

Ref: HealthRecordCondition.healthRecordId > HealthRecord.patientId [delete: Cascade]

Ref: HealthRecordCondition.conditionId > Condition.id [delete: Cascade]

Ref: HealthRecordCondition.lastUpdatedById > User.id

Ref: DoctorEducation.medicalSchoolId > MedicalSchool.id

Ref: DoctorEducation.doctorId > Doctor.id [delete: Cascade]

Ref: DoctorEducation.specialtyId > Specialty.id

Ref: DoctorSpecialty.doctorId > Doctor.id

Ref: DoctorSpecialty.specialtyId > Specialty.id

Ref: Doctor.id - User.id [delete: Cascade]

Ref: Appointment.patientId > Patient.id

Ref: Appointment.doctorId > Doctor.id

Ref: Prescription.appointmentId - Appointment.id

Ref: MedicinePrescription.medicineId > Medicine.id

Ref: MedicinePrescription.prescriptionId > Prescription.appointmentId